@@ -12,7 +12,7 @@ void testApp::setup(){
 
 //--------------------------------------------------------------
 void testApp::update(){
-    fingerMovie.idleMovie();
+    fingerMovie.update();
 }
 
 //--------------------------------------------------------------
